--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,26 @@
 .app-wrapper {
+	width: 1200px;
 	margin: 0px auto;
 	display: grid;
 
 	grid-template-areas: 
 	"h h"
 	"n c";
-
 	grid-template-rows: 60px 1fr;
 	grid-template-columns: 2fr 10fr;
 	column-gap: 10px;
 	row-gap: 10px; 
-
-	width: 1200px;
 }
 
+.app-wrapper-content {
+	grid-area: c;
+	background-color: cornflowerblue;
+}
 
+.app-wrapper-content img {
+	max-width: 100%;
+	height: auto;
+}
 
 
 
