--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -3,6 +3,12 @@
 	grid-template-columns: 2fr 10fr;
 }
 
+.dialog img {
+	width: 50px;
+	height: 50px;
+	border-radius: 30px;
+}
+
 .dialogsItems {
 	padding: 10px;
 }
