Изменения от 07.01.2023 16:30: Изучены Pagintation (постраничный вывод), создана ещё одна контейнерная компонента (UsersAPIComponent), рефакторинг кода

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
 	grid-template-columns: 2.5fr 10fr;
 	column-gap: 10px;
 	row-gap: 10px; 
+
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .app-wrapper-content {
