--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -3,3 +3,21 @@
 	height: 100px;
 	border-radius: 50%;
 }
+
+.pageNumber {
+	font-size: 20px;
+}
+
+.selectedPage {
+	font-weight: 700;
+	margin-right: 5px;
+}
+
+.nonSelectedPage {
+	margin-right: 5px;
+}
+
+.nonSelectedPage:hover {
+	cursor: pointer;
+	text-shadow: 1px 1px 1px #000;
+}
