Изменения от 09.01.2023 15:20: реализован функционал просмотра профиля пользователя из списка пользователей. Реализована загрузка страницы пользователя по userId. Нужно исправить отображения /profile.

--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,3 +1,29 @@
 .descriptionBlock {
 	padding: 10px;
+	display: flex;
+	align-items: center;
+}
+
+.userInfoWrapper {
+	margin-left: 10px;
+}
+
+.jobPicture {
+	width: 70px;
+	height: 100px;
+	border-radius: 50%;
+}
+
+.jobSearching {
+	display: flex;
+	align-items: center;
+}
+
+.userPhoto {
+	width: 300px;
+	height: 100px;
+}
+
+.userText {
+	margin-bottom: 20px;
 }
