--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -27,3 +27,21 @@
 .userText {
 	margin-bottom: 20px;
 }
+
+.statusBlock {
+	margin-bottom: 50px;
+	font-style: italic;
+	font-size: 20px;
+}
+
+.statusInputBlock {
+	margin-bottom: 50px;
+}
+
+.infoTitle {
+	font-weight: 700;
+}
+
+.statusText:hover {
+	cursor: pointer;
+}
