--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,3 +21,17 @@
 	color: white;
 	padding: 10px;
 }
+
+.logOutButton {
+	background-color: yellow;
+	font-size: 16px;
+	border-radius: 5px;
+	font-style: italic;
+	font-weight: 700;
+}
+
+.logOutButton:hover {
+	box-shadow: 1px 1px 1px yellow;
+	transition: all 0.5s;
+}
+
